--- a/template.html
+++ b/template.html
@@ -1,3 +1,4 @@
+<!-- The template file, contains the header and footer. -->
 <!doctype html>
 <html lang=en>
 <title>k3t - %%TITLE%%</title>
@@ -6,50 +7,7 @@
 <meta name=Description content="k3t site :3">
 <meta name=viewport content="width=device-width,initial-scale=1">
 <style>
-
-.rainbow{
-		animation: rainbow 10s linear;
-		animation-iteration-count: infinite;
-}
-
-@keyframes rainbow{
-		100%,0%{
-			color: rgb(255,0,0);
-		}
-		8%{
-			color: rgb(255,127,0);
-		}
-		16%{
-			color: rgb(255,255,0);
-		}
-		25%{
-			color: rgb(127,255,0);
-		}
-		33%{
-			color: rgb(0,255,0);
-		}
-		41%{
-			color: rgb(0,255,127);
-		}
-		50%{
-			color: rgb(0,255,255);
-		}
-		58%{
-			color: rgb(0,127,255);
-		}
-		66%{
-			color: rgb(0,0,255);
-		}
-		75%{
-			color: rgb(127,0,255);
-		}
-		83%{
-			color: rgb(255,0,255);
-		}
-		91%{
-			color: rgb(255,0,127);
-		}
-}
+.rainbow{animation:10s linear infinite rainbow}@keyframes rainbow{0%,100%{color:red}8%{color:#ff7f00}16%{color:#ff0}25%{color:#7fff00}33%{color:#0f0}41%{color:#00ff7f}50%{color:#0ff}58%{color:#007fff}66%{color:#00f}75%{color:#7f00ff}83%{color:#f0f}91%{color:#ff007f}}
 </style>
 <style>
     body{overflow-y:scroll;font:16px monospace,monospace}pre{margin:0;overflow-x:hidden}.t{text-decoration:none}@media(max-width:999px){body{font-size:1.94vw}}@media(prefers-color-scheme:dark){body{background:#000;color:#fff}a{color:#6CF}#l{color:#F33}#g{filter:invert(1)}}img,#b{max-width:80ch}span{display:inline-block}
@@ -66,7 +24,7 @@ kai's cottage | </a> <a href="https://discord.gg/crazycommnuity" class="rainbow"
 .______________________________________________________|_.(((___(((__/_./_._.
  \_____________________________________________________|_#_#_#_#_#_#_#_#_#_|
                                                        l
-k3t (C) 2024 [this means nothing lmfao] | site design from <a style=color:#a00 href=https://kisslinux.github.io>kisslinux</a>
+k3t (C) 2024 [this means nothing lol] | site design from <a style=color:#a00 href=https://kisslinux.github.io>kisslinux</a>
 
 </pre></div>
 </div>
