ahhhh i broke shit

--- a/template.html
+++ b/template.html
@@ -1,6 +1,5 @@
 <!doctype html>
 <!-- The template file, contains the header and footer. -->
-<!-- Credits to ZeaCeR for updating and suggesting patches to this file :3-->
 <html lang="en">
 <title>k3t - %%TITLE%%</title>
 <link rel="icon" type="image/x-icon" href="/favicon.ico">
@@ -64,10 +63,16 @@
         <pre>
 <span><a href="/" class="t" style="color:#AB48DA">
 
-kai's cottage | </a> <a href="https://discord.gg/newcrazycommunity" class="rainbow" >Crazy Community Discord :3</a>
+kai's cottage | </a> <a href="https://discord.gg/crazycommnuity" class="rainbow" >Crazy Commnuity Discord :3</a>
 <a style="color:#580989">many doors. which one though?</a>                          <a href="/bookmarks">Bookmarks</a>  <a href="/tools">Tools</a>  <a href="/contact">Contact</a> </span>
 %%CONTENT%%
-%%FOOTER%%
+                                                            |\__/,|   (`\
+                                                          _.|o o  |_  ) )
+.______________________________________________________|_.(((___(((__/_./_._.
+ \_____________________________________________________|_#_#_#_#_#_#_#_#_#_|
+                                                       l
+k3t (C) 2024 [this means nothing lol] | site design from <a style="color:#a00" href="https://kisslinux.github.io">kisslinux</a>
+
 </pre>
     </div>
 </div>
