--- a/template.html
+++ b/template.html
@@ -63,7 +63,7 @@
         <pre>
 <span><a href="/" class="t" style="color:#AB48DA">
 
-kai's cottage | </a> <a href="https://discord.gg/newcrazycommunity" class="rainbow" >Crazy Community Discord :3</a>
+kai's cottage | </a> <a style="color:#750303" href="https://teamsds.net">TeamSDS</a>
 <a style="color:#580989">many doors. which one though?</a>                          <a href="/bookmarks">Bookmarks</a>  <a href="/tools">Tools</a>  <a href="/contact">Contact</a> </span>
 %%CONTENT%%
                                                             |\__/,|   (`\
